Fixed issue with footer alignment on register page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,10 @@
-/*@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lato&display=swap');*/
-
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Original+Surfer&family=Lato&family=Rokkitt&display=swap');
 
+html{
+    min-height: 100%;
+}
+
+/* Navbar*/
 .navbar {
     background-color: #fef2f8;
     -webkit-box-shadow: 0 1rem 1rem rgba(10, 184, 223, .3);
@@ -61,6 +64,7 @@ body {
 }
 
 #main-container.container {
+    min-height: 100%;
     max-width: 100%;
     margin: 0;
     padding-right: 0;
@@ -751,7 +755,7 @@ textarea.form-control {
 
 /*Register Page*/
 .register-container {
-    height: 100vh;
+    height: 100%;
     padding-top: 80px;
 }
 
